Fixes: pagination alignment; re-render visualization on tab change (assign unique key to each visualization)

--- a/client/app/visualizations/table/renderer.less
+++ b/client/app/visualizations/table/renderer.less
@@ -1,9 +1,12 @@
 .table-visualization-container {
   .ant-pagination.ant-table-pagination {
     float: none;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
+    display: block;
+    text-align: center;
+  }
+
+  .ant-table-body {
+    overflow-x: auto;
   }
 
   table {
